--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.uri=mongodb+srv://m001-student:realunited@sandbox.5ke5h.mongodb.net/trainDB?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://m001-student:<password>@sandbox.5ke5h.mongodb.net/DB_NAME?retryWrites=true&w=majority
 spring.data.mongodb.auto-index-creation= true
 server.port=8082
 spring.application.name=train-service
