TripSchedule date issue fixed.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,8 @@ spring.data.mongodb.uri=mongodb+srv://m001-student:realunited@sandbox.5ke5h.mong
 spring.data.mongodb.auto-index-creation= true
 server.port=8082
 spring.application.name=train-service
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
+
+
+#status
+codes.trip-schedule-active=active
+codes.trip-schedule-cancelled=cancelled
