--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
-spring.data.mongodb.uri=mongodb+srv://m001-student:<password>@sandbox.5ke5h.mongodb.net/DB_NAME?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://m001-student:realunited@sandbox.5ke5h.mongodb.net/trainDB?retryWrites=true&w=majority
 spring.data.mongodb.auto-index-creation= true
 server.port=8082
 spring.application.name=train-service
 
+codes.trip-schedule-active=active
+codes.trip-schedule-cancelled=cancelled
+
+
+eureka.instance.prefer-ip-address=true
